# qbittorrent_tg_notificator

./: .gitignore  main.py  pyproject.toml  test_unittest.py
