[tool.poetry]
name = "qbittorrent-tg-notificator"
version = "0.1.0"
description = ""
authors = ["muhlymak <muhlymak@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
